# View

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  cairo_definition.h  view.cpp  view.h
src/Tests/: widgets_demo.cpp
src/cmake_modules/: FindCairo.cmake  FindPangoCairo.cmake
src/controls/: checkbox.cpp  checkbox.h  control.cpp  control.h  directory_view.h  filesystem_view.cpp  filesystem_view.h  knob.cpp  knob.h  label.cpp  label.h  push_button.cpp  push_button.h  simple_panel.h  text_input.cpp  text_input.h  text_push_button.cpp  text_push_button.h
src/display/: widget_adapter.cpp  widget_adapter.h
src/display/backends/: view_backend.h  win32_backend.cpp  win32_backend.h  x11_backend.cpp  x11_backend.h  x11_display.cpp  x11_display.h
src/display/common/: cursor.h  display_controler.h  widget_adapter.cpp  widget_adapter.h
src/display/display_types/: application_display.h  vst2_display.h
src/display/frontends/: application_display.cpp  application_display.h  vst2_display.cpp  vst2_display.h
src/display/implementations/: x11_application_display.cpp  x11_application_display.h  x11_vst2_display.cpp  x11_vst2_display.h
src/drawing/: cairo_helper.cpp  cairo_helper.h  color.h  named_colors.h  shadowed.cpp  shadowed.h  text_helper.cpp  text_helper.h
src/helpers/: alphabetical_compare.h  directory_model.h  filesystem_directory_model.cpp  filesystem_directory_model.h  layout_builder.cpp  layout_builder.h
src/internal_fonts/: internal_fonts.cpp  internal_fonts.h  internal_fonts_data.cpp
src/widget/: color_theme.h  display_controler.h  event.h  orientation.h  rectangle.h  size_constraint.h  widget.cpp  widget.h  widget_container.h  widget_proxy.h
src/widget_container/: background.cpp  background.h  border_wrapper.cpp  border_wrapper.h  color_panel.h  header.cpp  header.h  layout_separator.cpp  layout_separator.h  map_wrapper.cpp  map_wrapper.h  pair_layout.h  panel.h  widget_container.h  widget_wrapper_base.cpp  widget_wrapper_base.h
